# dice-game

./: Anchor.toml  package.json
programs/dice-game/: Cargo.toml
programs/dice-game/src/: lib.rs
tests/: dice-game.js
